Sat Dec 27 23:42:53 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (Controlling formatted output): Hide ".B
	  \-\-no\-hyphenation" from po4a.

Sat Dec 27 11:38:43 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Start 2.5.4.

Sat Dec 27 00:00:01 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Add option to disable hyphenation (Debian bug #166701).

	* src/man.c (options, parse_opt): Accept --no-hyphenation. Reset
	  corresponding variable with -D.
	  (disable_hyphenation): New function.
	  (display): Append disable_hyphenation to the decompressor pipeline
	  if --no-hyphenation is used.
	* man/man1/man.man1 (SYNOPSIS, Controlling formatted output):
	  Document --no-hyphenation.

Thu Dec 25 22:09:01 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Add regular expression and shell wildcard search facilities to man
	(Debian bug #461319).

	* src/whatis.c (lower): Move to ...
	* lib/lower.c: ... here, with optimisation from name_to_key. New
	  file.
	* lib/lower.h: New file.

	* src/whatis.c (word_fnmatch): Move to ...
	* lib/wordfnmatch.c: ... here, with more generic argument names. New
	  file.
	* lib/wordfnmatch.h: New file.

	* src/whatis.c (main): Factor regcomp error handling out to ...
	* lib/xregcomp.c: ... here. New file.
	* lib/xregcomp.h: New file.

	* lib/Makefile.am (libman_a_SOURCES): Add lower.c, lower.h,
	  wordfnmatch.c, wordfnmatch.h, xregcomp.c, and xregcomp.h.
	* po/POTFILES.in: Add lib/xregcomp.c; remove src/globbing.c.

	* libdb/db_lookup.c (name_to_key): Use lower.
	  (dblookup_pattern): New function.
	* libdb/db_storage.h (dblookup_pattern): Add prototype.
	* src/globbing.c (end_pattern): Rename to ...
	  (make_pattern): ... this. Create the whole pattern rather than
	  merely appending section or extension components. Handle regexes
	  if the new opts argument has the LFF_REGEX bit set.
	  (match_in_directory): Take an opts disjunction rather than a
	  boolean ignore_case argument; ignore_case is replaced by the