@@ -1,3 +1,8 @@
+Sat Dec 27 23:47:19 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* man/po4a/Makefile.am (dist-hook): Update PO and POT files on 'make
+	  dist'.
+
 Sat Dec 27 23:42:53 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* man/man1/man.man1 (Controlling formatted output): Hide ".B
